--- a/.config
+++ b/.config
@@ -4984,7 +4984,7 @@ CONFIG_V2RAY_DISABLE_NONE=y
 # CONFIG_PACKAGE_bird2cl is not set
 # CONFIG_PACKAGE_bmx6 is not set
 # CONFIG_PACKAGE_bmx7 is not set
-CONFIG_PACKAGE_cjdns=y
+# CONFIG_PACKAGE_cjdns is not set
 # CONFIG_PACKAGE_cjdns-tests is not set
 # CONFIG_PACKAGE_dcwapd is not set
 # CONFIG_PACKAGE_devlink is not set
